# zziplib

./: .cdtproject  .clang-format  .clang-format-ignore  .gitignore  .travis.yml  CMakeLists.txt  CPPLINT.cfg  ChangeLog  DEVGUIDE.md  GNUmakefile  Makefile  Makefile.am  Makefile.in  Makefile.mk  README  README.MD  TODO  acinclude.m4  aclocal.m4  azure-pipelines.yml  azure-tests-master.md  conanfile.py  config.h.in  configure  configure.ac  docker_mirror.mk  docker_mirror.py  docker_mirror.pyi  docs.mk  old.configure  old.configure.ac  pyproject.toml  setup.cfg  testbuilds.py  vcpkg.json  zzipbuildtests.py  zziplib.spec
.github/workflows/: clangformat.yml  lintcheck.yml  makecheck.yml  stylecheck.yml  typecheck.yml  unittests.yml
CMakeScripts/: CheckVerboseSymlink.cmake  TestLargefileSensitive.cmake
SDL/: CMakeLists.txt  Makefile.am  Makefile.in  SDL_rwops_zzcat.c  SDL_rwops_zzip.c  SDL_rwops_zzip.h  zzip-sdl-rwops.pc
bins/: CMakeLists.txt  Makefile.am  Makefile.in  unzip-mem.c  unzzip-states.h  unzzip.c  unzzipcat-big.c  unzzipcat-mem.c  unzzipcat-mix.c  unzzipcat-seeko.c  unzzipcat-zip.c  unzzipcat-zip.h  unzzipcat.c  unzzipdir-big.c  unzzipdir-mem.c  unzzipdir-mix.c  unzzipdir-zip.c  unzzipdir-zip.h  unzzipdir.c  unzzipshow.c  zzcat.c  zzdir.c  zzip.c  zzipmake-zip.c  zzipmake-zip.h  zziptest.c  zzobfuscated.c  zzxorcat.c  zzxorcopy.c  zzxordir.c
docs/: 64on32.htm.md  CMakeLists.txt  GNUmakefile  Makefile.am  Makefile.in  README.MD  README.MSVC6  body.htm  configs.htm  configs.htm.md  copying.htm.md  cpp2markdown-1.py  dbk2man.py  developer.htm  developer.htm.md  dir2index.py  download.htm  download.htm.md  faq.htm.md  fseeko.htm.md  functions.htm  functions.htm.md  future.htm.md  history.htm  history.htm.md  make-dbk.pl  make-doc.py  make-doc.py.old  makedocs.py  manpages.ar  md2dbk.py  mdhtm.py  memdisk.htm  memdisk.htm.md  mksite.pl  mksite.sh  mmapped.htm.md  notes.htm.md  referentials.htm  referentials.htm.md  (+29 more)
docs/tools/: cpp2markdown-1.py  cpp2markdown.py  dbk2man.py  dir2index.py  md2dbk.py  mdhtm.py
docs/zzipdoc/: commentmarkup.py  dbk2htm.py  docbookdocument.py  document.py  functionheader.py  functionlisthtmlpage.py  functionlistreference.py  functionprototype.py  htm2dbk.py  htmldoctypes.py  htmldocument.py  match.py  options.py  textfile.py  textfileheader.py
docs/zzipdoctool/: cpp2markdown-1.py  cpp2markdown.py  dbk2man.py  dir2index.py  md2dbk.py  mdhtm.py  py.typed
m4/: ac_sys_largefile_sensitive.m4  acx_restrict.m4  ax_cflags_no_writable_strings.m4  ax_check_aligned_access_required.m4  ax_configure_args.m4  ax_create_pkgconfig_info.m4  ax_enable_builddir.m4  ax_enable_builddir_uname.m4  ax_pax_tar.m4
msvc/zlib/include/: zconf.h  zlib.h
msvc8/: README.TXT  zzcat.vcproj  zzdir.vcproj  zzip.sln  zzipfseeko.vcproj  zziplib.vcproj  zzipmmapped.vcproj  zzipself.vcproj  zzipsetstub.vcproj  zziptest.vcproj  zzobfuscated.vcproj
test/: CMakeLists.txt  Makefile.am  Makefile.in  zzipself.c  zzipsetstub.c  zziptests.py
testbuilds/: almalinux9-am-build.dockerfile  almalinux9-am-sdl2.dockerfile  almalinux9-cm-build.dockerfile  almalinux9-cm-destdir-sdl2.dockerfile  almalinux9-cm-sdl2.dockerfile  centos7-am-build.dockerfile  centos7-am-docs.dockerfile  centos7-am-sdl2.dockerfile  centos7-automake.dockerfile  centos7-build.dockerfile  centos7-cm-build.dockerfile  centos7-cm-destdir-sdl2.dockerfile  centos7-cm-docs.dockerfile  centos7-cm-sdl2.dockerfile  centos7-docs.dockerfile  centos7-sdl2.dockerfile  centos8-am-build.dockerfile  centos8-am-sdl2.dockerfile  centos8-automake.dockerfile  centos8-build.dockerfile  centos8-cm-build.dockerfile  centos8-cm-destdir-sdl2.dockerfile  centos8-cm-sdl2.dockerfile  centos8-sdl2.dockerfile  opensuse15-build.dockerfile  opensuse15-cm-build-afl.dockerfile  opensuse15-cm-build.dockerfile  opensuse15-cm-htmpages.dockerfile  opensuse15-cm-sdl2.dockerfile  opensuse15-mk-docs-pip311-user.dockerfile  opensuse15-ninja-sdl2.dockerfile  opensuse15-nj-sdl2.dockerfile  opensuse15-sdl2.dockerfile  opensuse15-use-gcc10.dockerfile  opensuse15-use-gcc11.dockerfile  opensuse15-use-gcc12.dockerfile  opensuse15-use-gcc13.dockerfile  opensuse15-use-gcc7.dockerfile  opensuse15-use-gcc8.dockerfile  opensuse15-use-gcc9.dockerfile  (+38 more)
uses/: mkinstalldirs
vs2017/: zziplib.sln
vs2017/zzcat/: zzcat.vcxproj  zzcat.vcxproj.filters
vs2017/zzdir/: zzdir.vcxproj  zzdir.vcxproj.filters
vs2017/zzipfseeko/: zzipfseeko.vcxproj  zzipfseeko.vcxproj.filters
vs2017/zziplib/: zziplib.vcxproj  zziplib.vcxproj.filters
vs2017/zzipmapped/: zzipmapped.vcxproj  zzipmapped.vcxproj.filters
vs2017/zzipobfuscated/: zzipobfuscated.vcxproj  zzipobfuscated.vcxproj.filters
vs2017/zzipself/: zzipself.vcxproj  zzipself.vcxproj.filters
vs2017/zzipsetstub/: zzipsetstub.vcxproj  zzipsetstub.vcxproj.filters
vs2017/zziptest/: zziptest.vcxproj  zziptest.vcxproj.filters
zzip/: CMakeLists.txt  Makefile.am  Makefile.in  __debug.h  __dirent.h  __fnmatch.h  __hints.h  __mkdir.h  __mmap.h  __param.h  __string.h  _config.h  _config.h.cmake  _msvc.h  _msvc.sed  cdecl.h  conf.h  cstdint.h  dir.c  err.c  fetch.c  fetch.h  file.c  file.h  format.h  fseeko.c  fseeko.h  info.c  info.h  lib.h  memdisk.c  memdisk.h  mmapped.c  mmapped.h  plugin.c  plugin.h  stat.c  stdint.h  types.h  write.c  (+6 more)
zzipwrap/: CMakeLists.txt  Makefile.am  Makefile.in  wrap.c  wrap.h  zzipwrap.c  zzipwrap.pc
